--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
 
 name = "lmdb"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Dan Burkert <dan@danburkert.com>"]
 license = "Apache-2.0"
 
 description = "Safe Rust bindings for LMDB"
 repository = "https://github.com/danburkert/lmdb-rs.git"
 readme = "README.md"
-keywords = ["LMDB", "database", "storage-engine", "key-value-store", "bindings"]
+keywords = ["LMDB", "database", "storage-engine", "key-value-store", "bindings", "library"]
 
 [lib]
 
 name = "lmdb"
+
+[dependencies.lmdb-sys]
+path = "lmdb-sys"
+
