First cut at a higher-level api

--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -12,6 +12,9 @@ build = "build.rs"
 
 name = "lmdb-sys"
 
+[dependencies.rust-bindgen]
+rust-bindgen = "*"
+
 [build-dependencies.pkg-config]
 pkg-config = "*"
 
