simple iterator impl with benchmarks

--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -13,7 +13,7 @@ build = "build.rs"
 name = "lmdb-sys"
 
 [dependencies.rust-bindgen]
-rust-bindgen = "*"
+path = "../../rust-bindgen"
 
 [build-dependencies.pkg-config]
 pkg-config = "*"
