use upstream bindgen

--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -13,7 +13,7 @@ build = "build.rs"
 name = "lmdb-sys"
 
 [build-dependencies.rust-bindgen]
-git = "https://github.com/danburkert/rust-bindgen.git"
+git = "https://github.com/crabtw/rust-bindgen.git"
 
 [build-dependencies.pkg-config]
 pkg-config = "*"
