transition to bitflags crate

--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -15,8 +15,9 @@ name = "lmdb-sys"
 [build-dependencies.rust-bindgen]
 git = "https://github.com/crabtw/rust-bindgen.git"
 
-[build-dependencies.pkg-config]
+[build-dependencies]
 pkg-config = "*"
-
-[build-dependencies.gcc]
 gcc = "*"
+
+[dependencies]
+bitflags = "*"
