update for rustc 1.0.0-nightly (522d09dfe 2015-02-19) (built 2015-02-20)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ name = "lmdb"
 [dependencies.lmdb-sys]
 path = "lmdb-sys"
 
-[dependencies.bitflags]
-version = "*"
+[dependencies]
+bitflags = "*"
+
+[dev-dependencies]
+tempdir = "*"
+rand = "*"
