--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -11,6 +11,9 @@ documentation = "http://rust-ci.org/danburkert/lmdb-rs/doc/lmdb-sys/"
 
 build = "build.rs"
 
+[dependencies]
+libc = "*"
+
 [build-dependencies]
 pkg-config = "*"
 gcc = "*"
