--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lmdb-sys/mdb"]
-	path = lmdb-sys/mdb
-	url = https://gitorious.org/mdb/mdb.git
+[submodule "lmdb-sys/lmdb"]
+	path = lmdb-sys/lmdb
+	url = https://github.com/LMDB/lmdb
