--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "lmdb-sys"
-version = "0.4.3"
+version = "0.5.0"
 authors = ["Dan Burkert <dan@danburkert.com>"]
 license = "Apache-2.0"
 description = "Rust bindings for liblmdb."
@@ -12,8 +12,8 @@ documentation = "http://rust-ci.org/danburkert/lmdb-rs/doc/lmdb-sys/"
 build = "build.rs"
 
 [dependencies]
-libc = "*"
+libc = "0.2"
 
 [build-dependencies]
-pkg-config = "*"
-gcc = "*"
+pkg-config = "0.3"
+gcc = "0.3"
