--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 
 name = "lmdb"
+# NB: When modifying, also modify html_root_url in lib.rs
 version = "0.6.0"
 authors = ["Dan Burkert <dan@danburkert.com>"]
 license = "Apache-2.0"
