Compile lmdb with opt level O2
LMDB segfaults reliably with newer GCC versions when compiled with O3.
Regression test included.

fixes #21

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ script:
   - cargo build --verbose
   - if [[ $TRAVIS_RUST_VERSION = nightly* ]]; then
       env RUST_BACKTRACE=1 cargo test --all -v;
+      env RUST_BACKTRACE=1 cargo test --all -v --release;
     fi
