--- a/lmdb-sys/Cargo.toml
+++ b/lmdb-sys/Cargo.toml
@@ -20,4 +20,5 @@ libc = "0.2"
 
 [build-dependencies]
 pkg-config = "0.3"
-gcc = "0.3"
+# https://github.com/alexcrichton/gcc-rs/issues/240
+gcc = "=0.3.51"
