--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,23 +2,22 @@ environment:
   matrix:
     - TARGET: x86_64-pc-windows-msvc
     - TARGET: i686-pc-windows-msvc
-    - TARGET: x86_64-pc-windows-gnu
-      MSYS_BITS: 64
-    - TARGET: i686-pc-windows-gnu
-      MSYS_BITS: 32
 
 install:
-  - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-${env:TARGET}.exe"
-  - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
-  - set PATH=%PATH%;C:\Program Files (x86)\Rust\bin
-  - if defined MSYS_BITS set PATH=%PATH%;C:\msys64\mingw%MSYS_BITS%\bin
-  - rustc -V
+  - curl -sSf -o rustup-init.exe https://win.rustup.rs/
+  - rustup-init.exe -y --default-host %TARGET% --default-toolchain nightly
+  - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
+  - rustc -Vv
   - cargo -V
 
 build_script:
   - git submodule -q update --init
-  - cargo build --target %TARGET% --all -v
 
 test_script:
   - SET RUST_BACKTRACE=1
   - cargo test --target %TARGET% --all -v
+  - cargo test --release --target %TARGET% --all -v
+
+cache:
+  - C:\Users\appveyor\.cargo\registry
+  - target
